# Mindful-Notes

./: .gitignore  .gitmessage.txt  README.md  check_app.py  debug_app.py  pyproject.toml  reproduce_issue.py  test.sh  verify_logout.py
app/: main.py  models.py  scheduler.py
app/auth/: router.py  schemas.py
app/core/: config.py  database.py  security.py
app/diary/: deps.py  router.py  schemas.py  service.py
app/quotes/: router.py
app/tags/: router.py
migrations/models/: 0_20260120211648_init.py  0_20260121141043_init.py  1_20260122150840_update.py
scrapers/: qoute_manager.py
scripts/: purge_deleted_posts.py
