[project]
name = "mini-proj"
version = "0.1.0"
description = "FastAPI + PostgreSQL + Tortoise ORM 프로젝트"
readme = "README.md"
authors = [{name = "HHJina", email = "jina199234@gmail.com"}]
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "tortoise-orm[asyncpg]",
    "pydantic[email]",
    "passlib[bcrypt]",
    "python-multipart",
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "python-jose>=3.5.0",
]


[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.aerich]
tortoise_orm = "app.core.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
